css/main.css
/* ... */
.rounded-square-container {
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
  min-height: 90vh;
  margin: 0 auto;
  border-radius: 50px;
  box-shadow: 6px 9px 23px 0px rgba(117, 138, 180, 0.2);
  -webkit-box-shadow: 6px 9px 23px 0px rgba(117, 138, 180, 0.2);
  -moz-box-shadow: 6px 9px 23px 0px rgba(117, 138, 180, 0.2);
}
/* === AOS Custom Animaton ==*/

[data-aos="my-easing"] {
  transform: translateX(-100%);
  transition: all 0.5s;
  transition-timing-function: cubic-bezier(0.2, 3, 0.4, 2);
  transition-property: transform;
}
[data-aos="my-easing"].aos-animate {
  transform: translateX(0);
}
/* === Header - Footer === */
/* Menu */
#menu-content {
  visibility: hidden;
  position: fixed;
  display: flex;
  justify-content: center;
  align-items: center;
  color: #fff;
  top: 0;
  right: 0;
  text-align: center;
  font-size: 2.3em;
  font-weight: 700;
  text-transform: uppercase;
}

.open #menu-content {
  top: 97px;
  width: 100%;
  visibility: visible;
  z-index: 1001;
}

#menu-content ul {
  padding: 0;
}

#menu-content ul li a {
  color: #fff;
}

#menu-content ul li {
  opacity: 0;
  transform: translateX(50px);
  overflow: hidden;
}

.open #menu-content ul li {
  opacity: 1;
  transform: translateX(0);
  transition: all 0.5s;
  transition-timing-function: cubic-bezier(0.2, 3, 0.4, 1);
  transition-delay: 0.27s;
}

.open #menu-content ul li:nth-child(2) {
  transition-delay: 0.37s;
}

.open #menu-content ul li:nth-child(3) {
  transition-delay: 0.47s;
}

.open #menu-content ul li:nth-child(4) {
  transition-delay: 0.57s;
}

#menu-bg {
  content: "";
  height: 30px;
  width: 30px;
  border-radius: 50%;
  background-color: #fb746c;
  position: fixed;
  top: 14px;
  right: 9px;
  -webkit-transition: all 0.3s ease-out;
  transition: all 0.3s ease-out;
  -webkit-transform: scale(1);
  transform: scale(1);
  overflow: hidden;
  z-index: 1000;
}

.open #menu-bg {
  transform: scale(50, 35);
  transition: all 1s ease-out;
}

#menu-toggle {
  display: block;
  position: fixed;
  right: 16.5px;
  top: 19px;
  width: 15px;
  height: 20px;
  cursor: pointer;
  z-index: 1002;
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
}

#menu-toggle div {
  position: relative;
  display: flex;
  flex-direction: column;
}

#menu-span {
  height: 2px;
  width: 100%;
  padding: 0;
  background: #fff;
  zoom: 1;
  -webkit-transition: 0.35s ease-in-out;
  transition: 0.35s ease-in-out;
  margin: 2px 0;
  line-height: unset;
}

#menu-span :nth-child(1) {
  top: 0;
}

#menu-span :nth-child(2) {
  top: 8px;
}
#menu-span :nth-child(3) {
  top: 16px;
}

.open #menu-span:nth-child(1) {
  transform: translateY(8px) rotate(135deg) scaleX(1.5);
  height: 4px;
}

.open #menu-span:nth-child(2) {
  width: 0;
}

.open #menu-span:nth-child(3) {
  transform: translateY(-6px) rotate(45deg) scaleX(1.5);
  height: 4px;
}

/*Nav menu links*/
ul {
  list-style: none;
  padding: 0.5em 0 0 0;
  margin: 0 auto;
  text-align: center;
}

ul li {
  padding: 18px;
}

ul li a {
  text-decoration: none;
  text-align: center;
  color: #4d39d1;
}

/*Footer*/
footer {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-flow: column wrap;
}

.social {
  display: flex;
  flex-flow: row nowrap;
  justify-content: space-around;
  margin-top: 0.5em;
}

.social-icons {
  display: flex;
}

.social-icons p {
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: #fb746c;
  border-radius: 50%;
  width: 40px;
  height: 40px;
  margin: 0 1em 1em 1em;
}

.social-icons a {
  color: #f9fafc;
}

/* === Lastly === */
.lastly {
  position: relative;
}

.lastly p {
  position: absolute;
  text-align: center;
  width: 100%;
  bottom: -5px;
  color: #d6c3ff;
}

.lastly a {
  color: #d6c3ff;
}

/* == SVG ==*/
.svg-lt,
.svg-lm,
.svg-lb,
.svg-rt,
.svg-rm,
.svg-rb {
  position: absolute;
  /*z-index: -10;*/
  width: 124%;
}

.svg-lt {
  left: -85vw;
  top: -8vh;
  right: auto;
  bottom: auto;
  filter: drop-shadow(15px 10px 0px #f3f3f3);
}

.svg-lm {
  left: -92vw;
  top: 18vh;
  right: auto;
  bottom: auto;
}

.svg-lb {
  left: -92vw;
  top: 44.8vh;
  right: auto;
  bottom: auto;
  filter: drop-shadow(20px 10px 0px #f3f3f3);
}

.svg-rt {
  left: auto;
  top: 2vh;
  right: -86vw;
  bottom: auto;
}

.svg-rm {
  left: auto;
  top: 28.3vh;
  right: -98vw;
  bottom: auto;
}

.svg-rb {
  left: auto;
  top: 55vh;
  right: -102.5vw;
  bottom: auto;
  filter: drop-shadow(-6px 41px 0px #f3f3f3);
}

.svg-e6,
.svg-e7,
.svg-e9,
.svg-e10,
.svg-waves {
  position: absolute;
  /*z-index: -9;*/
}

.svg-e6 {
  left: 2vw;
  top: 13vh;
  right: auto;
  bottom: auto;
  max-width: 3%;
}

.svg-e7 {
  right: 10vw;
  top: 70.8vh;
  left: auto;
  bottom: auto;
  max-width: 3%;
}

.svg-e9 {
  left: 15%;
  top: 81vh;
  right: auto;
  bottom: auto;
  max-width: 2%;
}

.svg-e10 {
  right: 7vw;
  top: 20vh;
  left: auto;
  bottom: auto;
  max-width: 2%;
}

/* === Hero === */
.hero {
  display: flex;
  justify-content: center;
  flex-flow: column wrap;
  align-items: center;
  text-align: center;
  min-height: 100vh;
  overflow: hidden;
  position: relative;
  padding: 0 10%;
  margin: 0 auto;
  background: url(../img/bg-topography.svg) repeat center;
}

.hero .content-wrapper {
  z-index: 1;
}

.hero h2 {
  padding: 1em 0;
}
/* === Initial Call To Action === */
.initial-call-to-action {
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
  height: 80vh;
  overflow: hidden;
  padding: 80px 0 20px 0;
}

.initial-call-to-action .content-wrapper {
  background-color: #f9fafc;
  border-radius: 50px;
  padding: 40px 30px;
}

.initial-call-to-action h2 {
  padding-bottom: 1em;
}

.highlight {
  text-transform: none;
  font-weight: 700;
  border-radius: none;
}

/* === Work === */
.work {
  /*display: flex;
  justify-content: center;
  align-items: center;*/
  text-align: center;
  min-height: 50vh;
}

article {
  border-radius: 30px;
  padding: 40px 20px 10px 20px;
}
/* ... */

